<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Topatu</string>
    <string name="service_name">Topatu</string>

    <string name="showtext_settings_category_location_upload">Location upload</string>
    <string name="settings_upload_location">SETTINGS_UPLOAD</string>
    <string name="showtext_settings_upload_location_title">Upload my location</string>
    <string name="showtext_settings_upload_location_description">Upload location to Miataru server</string>
    <string name="settings_upload_autostart">SETTINGS_BOOT_AUTOSTART</string>
    <string name="showtext_settings_upload_autostart_title">Start automatically</string>
    <string name="showtext_settings_upload_autostart_description">On device boot automatically start uploading location</string>
    <string name="settings_upload_freq">SETTINGS_UPLOAD_FREQ</string>
    <string name="settings_upload_freq_default">300</string>
    <string name="showtext_settings_upload_freq_title">Upload frequency</string>
    <string name="showtext_settings_upload_freq_description">How often report my location</string>
    <string name="showtext_settings_upload_freq_dialog">Upload frequency</string>
    <string name="settings_save_location">SETTINGS_SAVE_LOCATION</string>
    <string name="showtext_settings_save_location_title">Save  location history</string>
    <string name="showtext_settings_save_location_description">Keep history in Miataru server</string>
    <string name="settings_save_freq">SETTINGS_SAVE_FREQ</string>
    <string name="settings_save_freq_default">60</string>
    <string name="showtext_settings_save_freq_title">Save frequency</string>
    <string name="showtext_settings_save_freq_description">How often save my location</string>
    <string name="showtext_settings_save_freq_dialog">Save frequency</string>

    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_my_id">SETTINGS_MY_ID</string>
    <string name="settings_my_id_title">My own ID</string>
    <!-- <string name="settings_my_id_description">Device identification ID</string> -->
    <string name="settings_my_server">SETTINGS_MY_SERVER</string>
    <string name="settings_my_server_local">LocalPosition</string>
    <string name="settings_my_server_default">service.miataru.com</string>
    <string name="settings_my_server_title">Miataru server</string>

    <string name="showtext_settings_freq_15_seconds">15 seconds</string>
    <string name="showtext_settings_freq_1_minute">1 minute</string>
    <string name="showtext_settings_freq_5_minutes">5 minutes</string>
    <string name="showtext_settings_freq_15_minutes">15 minutes</string>
    <string name="showtext_settings_freq_1_hour">1 hour</string>
    <string name="showtext_settings_freq_8_hours">8 hours</string>
    <string name="showtext_settings_freq_1_day">1 days</string>

    <string name="showtext_app_fragment_map">Map</string>
    <string name="showtext_app_fragment_friends">Friends</string>
    <string name="showtext_app_fragment_settings">Settings</string>

    <string name="showtext_notification_text">Topatu</string>
    <string name="showtext_notification_longtext">Location upload is active</string>
    <string name="showtext_notification_enabled">Location upload activated</string>

    <string name="showtext_myid_local">Myself</string>
    <string name="showtext_myid_remote">Myself (in cloud)</string>
    <string name="showtext_location_uploaded">My location uploaded</string>

    <string name="showtext_fragment_friends_add_friend">Add friend</string>
    <string name="showtext_fragment_friends_edit_friend">Edit</string>
    <string name="showtext_fragment_friends_delete_friend">Delete</string>
    <string name="showtext_fragment_friends_menu_dialog_title">Add friend</string>

    <string name="showtext_fragment_map_spinner_defaultmessage">Choose friend to show</string>

    <string name="showtext_friendinfo_server">Server</string>
    <string name="showtext_friendinfo_uuid">ID</string>
    <string name="showtext_friendinfo_alias">Alias</string>
    <string name="showtext_friendinfo_updated">Updated</string>
    <string name="showtext_friendinfo_updated_second">s</string>
    <string name="showtext_friendinfo_updated_minute">m</string>
    <string name="showtext_friendinfo_updated_hour">h</string>
    <string name="showtext_friendinfo_updated_day">d</string>
    <string name="showtext_friendinfo_updated_n_a">N/A</string>
    <string name="showtext_friendinfo_new_friend">New friend</string>
    <string name="showtext_friendinfo_edit_friend">Edit friend</string>
    <string name="showtext_friendinfo_accept">Accept</string>
    <string name="showtext_friendinfo_cancel">Cancel</string>
    <string name="showtext_friendinfo_confirm_deletion">Are you sure you want to delete friend?</string>
    <string name="showtext_friendinfo_yes">Yes</string>
    <string name="showtext_friendinfo_no">No</string>


    <string name="showtext_alert_invalid_friend_data">Invalid friend data</string>
    <string name="showtext_alert_friend_exists">Friend already exists</string>
    <string name="showtext_alert_friend_nothing_to_change">Nothing to change</string>
    <string name="showtext_alert_friend_deleted">Friend deleted</string>
    <string name="showtext_alert_friend_couldnt_delete">Could not delete Friend</string>


</resources>
