<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/showtext_settings_category_location_upload">
        <CheckBoxPreference
            android:key="@string/settings_upload_location"
            android:summary="@string/showtext_settings_upload_location_description"
            android:title="@string/showtext_settings_upload_location_title"
            android:defaultValue="false"
            android:persistent="true" />
        <CheckBoxPreference
            android:key="@string/settings_upload_autostart"
            android:summary="@string/showtext_settings_upload_autostart_description"
            android:dependency="@string/settings_upload_location"
            android:persistent="true"
            android:defaultValue="false"
            android:title="@string/showtext_settings_upload_autostart_title" />
        <ListPreference
            android:key="@string/settings_upload_freq"
            android:summary="@string/showtext_settings_upload_freq_description"
            android:dependency="@string/settings_upload_location"
            android:persistent="true"
            android:defaultValue="@string/settings_upload_freq_default"
            android:title="@string/showtext_settings_upload_freq_title"
            android:entries="@array/updatefreq"
            android:entryValues="@array/updatefreqvalues"
            android:dialogTitle="@string/showtext_settings_upload_freq_title" />
        <CheckBoxPreference
            android:key="@string/settings_save_location"
            android:title="@string/showtext_settings_save_location_title"
            android:defaultValue="false"
            android:persistent="true" />
        <ListPreference
            android:key="@string/settings_save_freq"
            android:dependency="@string/settings_save_location"
            android:persistent="true"
            android:defaultValue="@string/settings_save_freq_default"
            android:title="@string/showtext_settings_save_freq_title"
            android:entries="@array/updatefreq"
            android:entryValues="@array/updatefreqvalues"
            android:summary="@string/showtext_settings_save_freq_description"
            android:dialogTitle="@string/showtext_settings_save_freq_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_advanced">
        <EditTextPreference
            android:key="@string/settings_my_id"
            android:title="@string/settings_my_id_title"
            android:persistent="true" />
        <EditTextPreference
            android:key="@string/settings_my_server"
            android:defaultValue="@string/settings_my_server_default"
            android:title="@string/settings_my_server_title"
            android:persistent="true" />
    </PreferenceCategory>
</PreferenceScreen>