<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/friend_uuid"
        android:hint="@string/showtext_friendinfo_uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/friend_server"
        android:hint="@string/showtext_friendinfo_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/friend_alias"
        android:hint="@string/showtext_friendinfo_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>